deploy: ce77179a0e7e61e29ea13cd1474cfadaa36c6a73

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-efd2757c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-abe72160.js">
+		<link rel="modulepreload" href="./_app/immutable/start-5c1cfed1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8d07e911.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-2ce3eee1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-314c292d.js">
@@ -67,7 +67,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-e688278e.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-ac2ab012.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a4fd3a5e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-d560edae.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-cd96ebca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-4d65426e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-0d1c1a4b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/marked.esm-0b02a870.js">
@@ -435,20 +435,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/filippo-franchini-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Filippo Franchini"></div>
 
 
 
@@ -462,6 +449,45 @@
 
 
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/matej-curda-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Matěj Čurda"></div>
 
 
 
@@ -500,84 +526,6 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/steve-fau-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Steve Fau"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/matous-ledvina-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Matouš Ledvina"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/rene-darmos-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Rene Darmos"></div>
 
 
@@ -591,7 +539,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/metapavel-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Pavel Říha"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stepan-borovka-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Štěpán Borovka"></div>
 
 
 
@@ -604,7 +552,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
 
 
 
@@ -617,7 +565,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-kamlach-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kamlach"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
 
 
 
@@ -630,7 +578,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
 
 
 
@@ -643,20 +591,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/marianna-sadecka-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Marianna Sádecká"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
 
 
 
@@ -682,33 +617,111 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/kristina-klaudyova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Kristina Klaudyová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/sodomak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Půlkrábek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/matous-ledvina-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Matouš Ledvina"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/metapavel-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Pavel Říha"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-kamlach-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kamlach"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/niftyape-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="NiftyApe"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-hubik-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jan Hubík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
 
@@ -734,7 +747,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
 
 
 
@@ -747,7 +760,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-tesar-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Tesař"></div>
 
 
 
@@ -760,20 +773,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
 
 
 
@@ -973,7 +973,7 @@
   <div class="tooltip svelte-uasnpl    bottom"><div class="default-tip svelte-uasnpl" style="background-color: #462a4e;"><!-- HTML_TAG_START -->NFT Space<!-- HTML_TAG_END --></div></div>
 </div>
         </div></div>
-    <div class="mt-10 text-center">Mediální partneři</div>
+    <div class="mt-10 text-center">Partneři</div>
     <div class="mt-6 flex flex-wrap gap-4 justify-center"><div><div class="tooltip-wrapper svelte-uasnpl"><span class="tooltip-slot svelte-uasnpl"><a href="https://finex.cz/" target="_blank" rel="noreferrer"><div class="w-16 shadow-lg rounded-lg text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/finex-cz-web.svg" class="w-16 shadow-lg rounded-lg rounded-xl m-auto" alt="Finex.cz"></div>
 
 
@@ -1181,14 +1181,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="d5eq1g">
-			import { start } from "./_app/immutable/start-abe72160.js";
+		<script type="module" data-sveltekit-hydrate="1zbgeg">
+			import { start } from "./_app/immutable/start-5c1cfed1.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="d5eq1g"]').parentNode,
-				version: "1685363936358",
+				target: document.querySelector('[data-sveltekit-hydrate="1zbgeg"]').parentNode,
+				version: "1685364356507",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
